Closed Bug 1005580 Opened 11 years ago Closed 11 years ago

"Assertion failure: fragment" with </frameset> and other junk after </html>

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla32
Tracking Status
firefox32 --- verified

People

(Reporter: jruderman, Assigned: wchen)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file a.html
This testcase is slightly more complicated than the fixed one in bug 822776.
Attached file stack
Assertion failure: fragment, at parser/html/nsHtml5TreeBuilder.cpp:2882
Same issue as bug 822776, except for handing the character case. This patch updates the behavior to match the spec: http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#the-after-after-frameset-insertion-mode Also replaced some unused value assignments with comments.
Assignee: nobody → wchen
Attachment #8417664 - Flags: review?(hsivonen)
Attachment #8417664 - Flags: review?(hsivonen) → review+
Flags: in-testsuite+
OS: Mac OS X → All
Hardware: x86_64 → All
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Simply opening a new empty tab beside the tab with the testcase results in: [Child 8572] ###!!! ASSERTION: nsSSLStatus has null mServerCert or was called in the content process : 'Error', file c:\builds\moz2_slave\m-cen-w32-d-000000000000000000\build\security\manager\ssl\src\n sSSLStatus.cpp, line 112 Thoughts?
Flags: needinfo?(wchen)
I am not able to reproduce that. Is this reproducible for you? Does this only happen when you open a new tab beside the testcase? Does this only happen after the fix?. Looking at the code, I strongly suspect that this bug and the assertion in nsSSLStatus.cpp are different issues. I'll investigate this further if there is some evidence that the two are related.
Flags: needinfo?(wchen)
Actually it's not related. It happens before/after the fix by simply opening a new tab (without having the testcase open). Probably bug 900515. Marking this bug verified fixed on Nightly 32.0a1 2014-05-08-mozilla-central-debug, Win 7 x64.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: