Bug 1005580 - Fix "after after frameset" insertion mode in HTML parser for handling characters. r=hsivonen